--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -81,7 +81,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 26px;      
+  font-size: 26px;  
+  font-family: Arial, sans-serif;    
   font-weight: bold;
   cursor: pointer;
   color: gray;
